--- a/story/PokerHand.tex
+++ b/story/PokerHand.tex
@@ -48,7 +48,7 @@
 	identifierstyle=\color{black}\textsl,
 	morekeywords={subsequences, comparing, Suit, Card, Value, Hand, Ranking},
         classoffset=1,
-        morekeywords={C, H, HighCard,Pair,TwoPairs,ThreeOfAKind,FullHouse,Straight,Flush,StraightFlush,FourOfAKind}, keywordstyle={\color{darkgreen}},
+        morekeywords={C, H, HighCard,Pair,TwoPair,ThreeOfAKind,FullHouse,Straight,Flush,StraightFlush,FourOfAKind,RoyalFlush}, keywordstyle={\color{darkgreen}},
         classoffset=0,
 	stringstyle=\color{darkgreen},
 	commentstyle=\color{red},
